# feldspar

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  test-tmux-hook.sh
.claude/agents/: ar-glm5.md  ar-k.md  ar-o.md  build.md  pm-k.md  pm-s.md  qa-b.md  qa-docs.md  qa-f.md
.claude/resources/: agent_feldspar_template.yaml
PROCESS_DOCS/briefs/: 01-types-config.md  02-http-server-mcp.md  03-thought-processor.md  04-warning-engine.md  05-cognitive-analyzers.md
PROCESS_DOCS/reviews/: ar_01_types_config.md  ar_02_http_server_mcp.md  ar_03_thought_processor.md  ar_04_warning_engine.md  ar_05_cognitive_analyzers.md
PROCESS_DOCS/solutions/: 01-types-config.md  02-http-server-mcp.md  03-thought-processor.md  04-warning-engine.md  05-cognitive-analyzers.md
Valence_ext/: external-agents.json  package-lock.json
agents/: ar.toml  arm.toml  breakdown.toml  bugfest.toml  build.toml  orchestrator.toml  pmatch.toml  solve.toml
config/: feldspar.toml  principles.toml  principles.yaml
docs/: wire-response-diet.md
docs/plans/: 2026-04-06-thought-processor-design.md
hooks/: hooks.json
hooks/scripts/: orchestrator-context.md  session-start.sh
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/feldspar/: README.md  package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
scripts/: build-npm.sh  setup-tmux.sh
skills/fs/: SKILL.md  (+1 more)
src/: agents.rs  ar.rs  config.rs  db.rs  doctor.rs  init.rs  llm.rs  main.rs  mcp.rs  ml.rs  proxy.rs  pruning.rs  schemas.rs  thought.rs  tool_description.txt  trace_review.rs  warnings.rs
(+27 files in other folders)
