[package]
name = "feldspar"
version = "0.1.0"
edition = "2024"
description = "Cognitive reasoning MCP server with real-time ML learning"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# MCP protocol + HTTP server
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
rayon = "1.10"
uuid = { version = "1", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# ML
perpetual = "3.0.0-rc.2"

# Text similarity (for bias/sycophancy detection)
strsim = "0.11"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Config
toml = "0.8"

[dev-dependencies]
assert_matches = "1.5"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = true
strip = true
